# verbose-giggle

./: .gitignore  alembic.ini  pyproject.toml
migrations/: env.py
migrations/versions/: 1ce321fe1ff5_2_vacancy_tables.py  1d1780a89a42_add_tables.py  24c8d53ed3dd_1_initial_migration.py  6e7cf2c7a5c4_3_vacancy_link.py  7654737218ed_1_vacancy.py  7f56eca4479c_4_length_text.py  f64fc2a89309_2_vacancy_uq_tool.py
secret/: .envfile  .envfile.example  .example.env
secrets/: .example.env
src/: Makefile  alembic.ini  main.py
src/.migrations/: env.py
src/.migrations/versions/: 2024_09_15_1955-60da7f790c90_init.py  2024_09_16_0952-76c77cc60d1a_fix.py  2024_09_16_1350-139142716e39_init.py  2024_09_21_1434-d11b03287664_add_chat.py  2024_09_21_1820-8a1e70418147_message_edit.py  2024_09_27_1137-fb7b557a82cf_add_evals.py  2024_09_27_1555-87a70e0a78d7_add_msg_fk.py  2024_10_12_1231-beaeb998ba66_extend_user_email_len.py
src/admin/: admin.py  auth.py
src/apps/: router.py
src/apps/v1/: router.py
src/apps/v1/auth/: model.py  repository.py  router.py  schema.py  service.py
src/apps/v1/auth/utils/: auth.py
src/apps/v1/interview/: model.py  repository.py  router.py  schema.py  service.py
src/apps/v1/interview/utils/: request.py
src/apps/v1/user/: model.py  repository.py  router.py  schema.py  service.py
src/apps/v1/vacancy/: model.py  repository.py  router.py  schema.py  service.py
src/apps/v1/vacancy/utils/parser/: analyzer.py  base.py  head_hunter.py
src/base/: model.py  repository.py  service.py
src/core/: celery.py  config.py  database.py  exceptions.py  settings.py
src/repository/: alchemy_orm.py  base.py
src/schemas/: user.py
src/service/: base.py
src/tasks/: parse.py
src/utils/: cache.py  mail.py  pagination.py  parser.py
src/utils/factory/: resume.py  user.py  vacancy.py
src/utils/parser/: analyzer.py  base.py  head_hunter.py
src/v1/: router.py
src/v1/user/model/: model.py
src/v1/user/repository/: repository.py
src/v1/user/router/: router.py
src/v1/user/schema/: schema.py
src/v1/user/service/: service.py
src/v1/vacancy/model/: model.py
src/v1/vacancy/repository/: repository.py
src/v1/vacancy/router/: resume_router.py  router.py  vacancy_router.py
src/v1/vacancy/schema/: schema.py
src/v1/vacancy/service/: service.py
tests/: conftest.py  model.py
tests/apps/vacancy/: conftest.py  test_output.py  test_status.py
tests/endpoint/auth/: test_login.py  test_password_recovery.py  test_password_reset_request.py  test_refresh_token.py
tests/endpoint/interview/: test_create_chat.py  test_get_answer.py  test_get_chat.py  test_get_chats.py  test_send_question.py
tests/factory/: base.py  resume.py  user.py  vacancy.py
tests/repository/: test_answer.py  test_chat.py  test_evaluation.py  test_message.py  test_question.py  test_user.py
tests/service/: test_answer.py  test_chat.py  test_evaluation.py  test_message.py  test_question.py  test_user.py
tests/utils/parser/: test_head_hunter.py
tests/v1/: conftest.py  test_main.py
tests/v1/vacancy/: conftest.py  test_output.py  test_status.py
