[tool.poetry]
name = "fastapipythonrussia"
version = "0.1.0"
description = ""
authors = ["ya.novikov <arhdomain@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
asyncpg = "^0.29.0"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
pydantic = "^2.7.1"
pyjwt = "^2.8.0"
bcrypt = "^4.1.3"
factory-boy = "^3.3.0"
pydantic-settings = "^2.2.1"
python-multipart = "^0.0.9"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
